deployment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satellite-images-model-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: satellite-images-model-deployment
  template:
    metadata:
      labels:
        app: satellite-images-model-deployment
    spec:
      containers:
        - name: satellite-images-app
          image: inseefrlab/satellite-images-inference:v0.2.10
          imagePullPolicy: Always
          resources:
            limits:
              memory: "50Gi"
              cpu: "90000m"
            requests:
              memory: "8Gi"
              cpu: "1000m"
