deployment-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satellite-images-model-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: satellite-images-model-deployment
